--- a/Datenzaepfchen/data/css/datenzaepfchen.css
+++ b/Datenzaepfchen/data/css/datenzaepfchen.css
@@ -1,24 +1,11 @@
-html,
-body,
-.flexbox {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-
-.flexrow {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+.page {
+	width: 100%;
+	height: 100%;
+	padding: 1em:
 }
 
 .panel {
-	display: inline-block;
+	margin: 1em;
 }
 
 .panel-heading {
